--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -14,6 +14,7 @@
   height:100%;
 	margin: 0 auto;
 	margin-top: 80px;
+	z-index: 99;
 }
 
 
